--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-codemirror",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Codemirror",
   "main": "lib/Codemirror.js",
   "author": "Jed Watson",
@@ -21,7 +21,8 @@
     "gulp": "^3.9.0",
     "happiness": "^1.0.7",
     "react": "^0.13.3",
-    "react-component-gulp-tasks": "^0.7.6"
+    "react-component-gulp-tasks": "^0.7.6",
+    "react-dom": "^0.14.0"
   },
   "peerDependencies": {
     "react": "^0.13 || ^0.14.0-beta"
